Reduce result size to fit on iphone5. Fix #72

--- a/src/pages/measure/measure.scss
+++ b/src/pages/measure/measure.scss
@@ -175,11 +175,12 @@ ion-content#measure{
 
 
 		h1{
-			font-size:8em;
+			font-size:5em;
 			color:#4d77a7;
 			font-weight:bolder;
 			text-align:center;
 			margin:0;
+			margin-top:5%;
 			padding: 0;
 			margin-left:-0.5em;
 		}
@@ -194,7 +195,7 @@ ion-content#measure{
 
 		span.watch-name{
 			margin-top:5%;
-			font-size:2em;
+			font-size:1.5em;
 			text-transform:capitalize;
 		}
 
